# apexaiassistant

./: .gitignore  COMPLETE_ACTIONS_LIST.md  CONFIGURATION.md  INSTALL.txt  INSTALLATION.md  MANIFEST.in  PRD.md  README.md  SKIP_ASSETS_INSTALL.md  package.json  pyproject.toml  replace_script.py  requirements.txt  setup.cfg  setup.py
apexaiassistant/: __init__.py  hooks.py  install.py  modules.txt
apexaiassistant/apexaiassistant/api/: chat.py  webhook.py
apexaiassistant/apexaiassistant/core/: action_registry.py  actions_data.py  advanced_tools.py  analytics.py  audit_logger.py  data_export.py  document_manager.py  email_reports.py  file_analysis.py  module_tools.py  nl_sql.py  orchestrator.py  pdf_generator.py  rag_engine.py  watchdog.py
apexaiassistant/apexaiassistant/doctype/ai_conversation/: __init__.py  ai_conversation.json  ai_conversation.py
apexaiassistant/apexaiassistant/doctype/ai_knowledge_base/: ai_knowledge_base.json  ai_knowledge_base.py
apexaiassistant/apexaiassistant/doctype/ai_knowledge_chunk/: ai_knowledge_chunk.json  ai_knowledge_chunk.py
apexaiassistant/apexaiassistant/doctype/apexaiassistant_action_registry/: apexaiassistant_action_registry.json  apexaiassistant_action_registry.py
apexaiassistant/apexaiassistant/doctype/apexaiassistant_action_role/: apexaiassistant_action_role.json  apexaiassistant_action_role.py
apexaiassistant/apexaiassistant/doctype/apexaiassistant_audit_log/: apexaiassistant_audit_log.json  apexaiassistant_audit_log.py
apexaiassistant/apexaiassistant/doctype/apexaiassistant_chat_message/: apexaiassistant_chat_message.json  apexaiassistant_chat_message.py
apexaiassistant/apexaiassistant/doctype/apexaiassistant_chat_session/: apexaiassistant_chat_session.json  apexaiassistant_chat_session.py
apexaiassistant/apexaiassistant/doctype/apexaiassistant_enabled_module/: apexaiassistant_enabled_module.json  apexaiassistant_enabled_module.py
apexaiassistant/apexaiassistant/doctype/apexaiassistant_settings/: apexaiassistant_settings.json  apexaiassistant_settings.py
apexaiassistant/apexaiassistant/module_def/apexaiassistant/: apexaiassistant.json
apexaiassistant/apexaiassistant/page/apexaiassistant_chat/: apexaiassistant_chat.css  apexaiassistant_chat.js  apexaiassistant_chat.json
apexaiassistant/apexaiassistant/workspace/apex_ai/: apex_ai.json
apexaiassistant/apexaiassistant/workspace/apexaiassistant/: apexaiassistant.json
apexaiassistant/apexaiassistant/www/: chat.html  chat.py
apexaiassistant/public/: build.json
apexaiassistant/public/css/: apexaiassistant.bundle.css  apexaiassistant.css
apexaiassistant/public/js/: apexaiassistant.bundle.js
apexaiassistant/public/src/css/: apexaiassistant.css
apexaiassistant/public/src/js/: apexaiassistant.bundle.js
