[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apexaiassistant"
version = "0.0.1"
description = "AI-powered assistant for ERPNext"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Company", email = "support@yourcompany.com"}
]
dependencies = [
    "openai>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/africanwebguy/apexaiassistant"
Documentation = "https://github.com/africanwebguy/apexaiassistant"
Repository = "https://github.com/africanwebguy/apexaiassistant"

[tool.setuptools]
packages = ["apexaiassistant"]

[tool.setuptools.package-data]
apexaiassistant = ["**/*.json", "**/*.js", "**/*.css", "**/*.html", "**/*.py", "**/*.md", "**/*.txt"]
