[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apexaiassistant"
version = "0.0.1"
description = "AI-powered assistant for ERPNext"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Apexlogic Technology", email = "info@apexlogicsoftware.com"}
]
dependencies = [
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.14.0",
    "scikit-learn>=1.2.0",
    "openpyxl>=3.1.0",
    "litellm>=1.0.0",
    "PyPDF2>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/Apexlogic-Technology/apexaiassistant"
Documentation = "https://github.com/Apexlogic-Technology/apexaiassistant"
Repository = "https://github.com/Apexlogic-Technology/apexaiassistant"

[tool.setuptools]
packages = ["apexaiassistant"]

[tool.setuptools.package-data]
apexaiassistant = ["**/*.json", "**/*.js", "**/*.css", "**/*.html", "**/*.py", "**/*.md", "**/*.txt"]
