[metadata]
name = apexaiassistant
version = 0.0.1
description = AI-powered assistant for ERPNext
long_description = file: README.md
long_description_content_type = text/markdown
author = Apexlogic Technology
author_email = info@apexlogicsoftware.com
license = MIT
url = https://github.com/Apexlogic-Technology/apexaiassistant
project_urls =
    Bug Tracker = https://github.com/Apexlogic-Technology/apexaiassistant/issues
    Documentation = https://github.com/Apexlogic-Technology/apexaiassistant
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    openai>=1.0.0
    pandas>=2.0.0
    numpy>=1.24.0
    plotly>=5.14.0
    scikit-learn>=1.2.0
    openpyxl>=3.1.0
    litellm>=1.0.0
    PyPDF2>=3.0.0
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    __pycache__
